--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
 }
 .vfd-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
